--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,4 +1,4 @@
-name: testing-node
+name: ci
 
 on: [push]
 
@@ -8,19 +8,39 @@ jobs:
 
     strategy:
       matrix:
-        node-version: ['14', '16']
+        node-version: ['16']
 
     steps:
+      # Nodejs setup
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
+
+      # Testing and build
       - name: yarn install and test
         run: |
           yarn install
           yarn test
           yarn test:e2e
-        env:
-          CI: true
+
+      # Docker setup, build and deploy
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@V1
+      - name: Set Up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: rodolfolemes/strokes-api:latest
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}s
