--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -28,7 +28,7 @@ jobs:
 
       # Docker setup, build and deploy
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@V1
+        uses: docker/setup-qemu-action@v1
       - name: Set Up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
