--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -40,6 +40,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          context: ./Dockerfile.prod
           push: true
           tags: rodolfolemes/strokes-api:latest
       - name: Image digest
