--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,8 +25,14 @@ jobs:
       - name: yarn install and test
         run: |
           yarn install
-          yarn test
+          yarn test:cov
           yarn test:e2e
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       # Docker setup, build and deploy
       - name: Set up QEMU
