--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,11 @@
-sonar.projectKey=strokes-api
+sonar.projectKey=RodolfoLemes_strokes-api
+sonar.organization=rodolfolemes-strokes-api
 
-sonar.sources=.
+sonar.sources=src
+sonar.sourceEncoding=UTF-8
+sonar.exclusions=**/*.spec.ts
+
+sonar.tests.inclusions=**/*.spec.ts
+
+sonar.javascript.coveragePlugin=lcov
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
