:chart_with_upwards_trend: ci(sonarqube): update properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,6 +5,7 @@ sonar.sources=src
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=**/*.spec.ts
 
+sonar.coverage.exclusions=**/*.schema.ts, **/*.dto.ts, **/*.config.ts, **/main.ts
 sonar.tests.inclusions=**/*.spec.ts, **/*.e2e-spec.ts
 
 sonar.javascript.coveragePlugin=lcov
