--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "strokes-api",
   "private": true,
   "version": "1.0.0",
-  "description": "Nest TypeScript starter repository",
+  "description": "Chinese strokes API",
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
@@ -24,22 +24,20 @@
     "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.0",
     "@nestjs/mongoose": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-fastify": "^8.0.4",
     "@nestjs/swagger": "^5.0.8",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
-    "cors": "^2.8.5",
     "fastify-swagger": "^4.8.3",
     "mongoose": "^5.13.3",
     "morgan": "^1.10.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "uuid": "^8.3.2"
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
+    "@nestjs/platform-express": "^8.0.5",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
@@ -49,6 +47,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
+    "depcheck": "^1.4.2",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
